# KobayashiIso

./: .gitignore  LICENSE  README.md  env.yml  requirements.txt  run.sh
config/: params.yaml
cpp/: CMakeLists.txt  plot.py
cpp/data/: step_00000.h5  step_00500.h5  step_01000.h5  step_01500.h5  step_02000.h5  step_02500.h5  step_03000.h5  step_03500.h5  step_04000.h5  step_04500.h5  step_05000.h5
cpp/include/: boundary_conditions.hpp  fields.hpp  io_utils.hpp  matrix.hpp  solvers.hpp  utils.hpp
cpp/src/: boundary_conditions.cpp  build_matrices.cpp  initialize.cpp  main.cpp  read.cpp  solve.cpp  utils.cpp  write.cpp
cpp/tests/: CMakeLists.txt  test_utils.cpp
docs/: Doxyfile  Makefile
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/.doctrees/cpp/: index.doctree
docs/_build/html/.doctrees/python/: modules.doctree  pyKobayashiIso.bc.doctree  pyKobayashiIso.doctree  pyKobayashiIso.fields.doctree  pyKobayashiIso.io_utils.doctree  pyKobayashiIso.solvers.doctree  pyKobayashiIso.utils.doctree  src.bc.doctree  src.doctree  src.fields.doctree  src.io_utils.doctree  src.solvers.doctree  (+1 more)
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/cpp/: index.html
docs/_build/html/python/: modules.html  pyKobayashiIso.bc.html  pyKobayashiIso.fields.html  pyKobayashiIso.html  pyKobayashiIso.io_utils.html  pyKobayashiIso.solvers.html  pyKobayashiIso.utils.html  src.bc.html  src.fields.html  src.html  src.io_utils.html  src.solvers.html  src.utils.html
docs/doxygen/html/: dir_07f37e320deb3031a60f4b23b9c60eb5.html  dir_07f37e320deb3031a60f4b23b9c60eb5_dep.map  dir_07f37e320deb3031a60f4b23b9c60eb5_dep.md5  dir_7e72c7cf48e3493f8206cd364e6bc9f6.html  dir_7e72c7cf48e3493f8206cd364e6bc9f6_dep.map  dir_7e72c7cf48e3493f8206cd364e6bc9f6_dep.md5  dir_df511e5bd85cec96854b39d5e1c27aa8.html  files.html  graph_legend.html  index.html  utils_8hpp_source.html
docs/doxygen/latex/: files.tex  refman.tex  utils_8hpp_source.tex
docs/doxygen/xml/: Doxyfile.xml  dir_07f37e320deb3031a60f4b23b9c60eb5.xml  dir_7e72c7cf48e3493f8206cd364e6bc9f6.xml  dir_df511e5bd85cec96854b39d5e1c27aa8.xml  index.xml  main_8cpp.xml  utils_8hpp.xml
docs/source/: conf.py
docs/source/python/: modules.rst  pyKobayashiIso.bc.rst
environment/: env.yml
python/: .gitignore  README.md
python/config/: params.yaml
python/pyKobayashiIso/: main.py
python/pyKobayashiIso/bc/: __init__.py  boundary_conditions.py
python/pyKobayashiIso/fields/: __init__.py  initialize.py
python/pyKobayashiIso/io_utils/: read.py  save.py  visualize.py
python/pyKobayashiIso/solvers/: __init__.py  heat.py  matrix.py  phase.py
python/pyKobayashiIso/tests/: test_utils.py
python/pyKobayashiIso/utils/: math_utils.py
python/src/: \  main.py  utils.py
python/src/bc/: boundary_conditions.py
python/src/config/: config.py
python/src/fields/: __init__.py
python/src/io/: read.py  save.py  visualize.py
python/src/io_utils/: __init__.py  save.py  visualize.py
python/src/solvers/: matrix.py
python/src/utils/: __init__.py  math_utils.py
python/tests/: test_utils.py
(+11 files in other folders)
